--- a/src/components/FooterSection/footerSection.css
+++ b/src/components/FooterSection/footerSection.css
@@ -1,5 +1,5 @@
 .footer {
-  position: fixed;
+  position: fixed; /* Changed from 'fixed' */
   width: 100%;
   bottom: 0;
   z-index: 100;
@@ -9,7 +9,8 @@
   padding: 1rem;
   background-color: #e4dfc9;
   transition: padding 0.5s ease;
-  height: 60px;
+  height: min-content; /* Changed from '60px' */
+  overflow-x: hidden;
 }
 
 .container {
@@ -86,7 +87,6 @@
   }
 
   .footer {
-    height: auto;
-    padding: 0.5rem 0;
+    padding-bottom: 1rem;  /* increased bottom padding */
   }
 }
