--- a/src/components/Pages/blogFolder/BlogPageStyles.css
+++ b/src/components/Pages/blogFolder/BlogPageStyles.css
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
   margin: 50px 0;
+  box-sizing: border-box;  /* Added */
 }
 
 .blog-post {
