--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -14,8 +14,10 @@ body {
   padding: calc(2rem);
   background-color: #e4dfc9;
   transition: padding 0.5s ease;
-  height: 54px;
+  height: min-content;
   overflow-x: hidden;
+  box-sizing: border-box;  /* Added */
+  overflow: hidden;
 }
 
 .logo {
@@ -81,7 +83,7 @@ body {
     align-items: flex-start;
     justify-content: start;
     transition: transform 0.3s ease-in-out;
-    transform: translateX(100%);
+    transform: translateX(200%);
     padding: 2rem;
     box-sizing: border-box;
     width: 100%;
